Add_upload_progress_tracking
